base page update

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -9,12 +9,12 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-   <meta name="description" content="{% block meta_desc %} Access top-quality online training courses for construction and general industries professionals. We provide free courses and bulk discounts. Start learning now! {% endblock %}" />
+   <meta name="description" content="{% block meta_desc %}Access top-quality online training courses for construction and general industries professionals. We provide free courses and bulk discounts. Start learning now!{% endblock %}" />
    <meta name="author" content="{% block meta_author %}{% endblock %}" />
    <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
    <meta name="robots" content="all" />
 
-   <title>{% block title %}Top-Quality Online Safety Training Courses | Free & Bulk Discounts | Learn Now! {% endblock %}</title>
+   <title>{% block title %}Safety Training and Certification | pdhsafety.com{% endblock %}</title>
 
    <link rel="icon" type="image/png" href="{% static 'edutim/images/logo100.png' %}" />
    <link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
@@ -155,9 +155,9 @@
          
             <div class="container justify-content-start1">
 
-               <a title="PdhSafety" class="navbar-brand text-dark" title="Make Safety Training Happen" href="/" aria-label="Home">
+               <a title="NYC Construction Safety Training (PdhSafety.com)" class="navbar-brand text-dark" title="Make Safety Training Happen" href="/" aria-label="Home">
                   <img src="{% static 'edutim/images/logo100.png' %}" width="100" height="100"
-                     alt="Make Safety Training Happen" title="PdhSafety" class="img-fluid" />
+                     alt="Make Safety Training Happen" title="NYC Construction Safety Training (PdhSafety.com)" class="img-fluid" />
                </a>
                <span class="mr-auto top-logo-tagline d-none d-md-block d-lg-block d-xl-block">Make Safety Training Happen</span>
 
@@ -293,7 +293,8 @@
                <div class="widget footer-widget mb-5 mb-lg-0">
                   <span class="widget-title">About Us</span>
                   <p class="mt-3">
-                     NYC Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are essential for achieving success and career outcomes in the construction industry, ensuring that course material is both useful and applicable. We conduct perpetual reviews of training materials to maintain accuracy and relevance, and we are committed to developing a team of high-quality staff and instructors.
+                     NYC Construction Safety Training (PdhSafety.com)
+                     aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are essential for achieving success and career outcomes in the construction industry, ensuring that course material is both useful and applicable. We conduct perpetual reviews of training materials to maintain accuracy and relevance, and we are committed to developing a team of high-quality staff and instructors.
                   </p>
                   <ul class="list-inline footer-socials">
                      <li class="list-inline-item">
@@ -415,12 +416,12 @@
                <div class="col-lg-2">
                   <div class="footer-logo">
                      <img data-src="{% static 'edutim/images/logo100.png' %}" width="100" height="100"
-                      title="NYC Construction Safety Training, LLC" alt="NYC Construction Safety Training, LLC" class="lazy img-fluid" />
+                      title="NYC Construction Safety Training (PdhSafety.com)" alt="NYC Construction Safety Training (PdhSafety.com)" class="lazy img-fluid" />
                   </div>
                </div>
                <div class="col-lg-10">
                   <div class="copyright text-lg-center">
-                     <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC</p>
+                     <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC (PdhSafety.com)</p>
                      <p>
                         <a class="text-white small" title="DEVELOPED BY" href="https://www.linkedin.com/in/shoaibijaz/" target="_blank">DEVELOPED BY SHAH</a>
                      </p>
