--- a/app_students/templates/orders/purchase_history.html
+++ b/app_students/templates/orders/purchase_history.html
@@ -71,7 +71,10 @@ My Purchase History
                                                 <!-- <button type="button" class="button alt mr-2"
                                                     value="Receipt">Receipt</button> -->
                                                 <a href="{% url 'student_purchase_invoice' order.ref_id order_item.pk  %}" target="_blank" type="button" class="button alt btn-info"
-                                                    value="Receipt">Invoice</a>
+                                                    value="Invoice">Invoice</a>
+                                                    <a href="{% url 'student_purchase_receipt' order.ref_id order_item.pk  %}" target="_blank" type="button" class="button alt btn-info"
+                                                    value="Receipt">Receipt</a>
+
 
                                             </td>
                                         </tr>
