remove noindex subject

--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -3,10 +3,6 @@
 {% load course_tags %}
 {% load cache %}
 
-{% block head %}
-<meta name="robots" content="noindex">
-{% endblock %}
-
 {% block title %}
 {% if subject %} Best {{ subject.title }} Courses Online | pdhsafety.com {%else%}
 Best Safety Training and Certification Courses Online | pdhsafety.com
@@ -15,9 +11,7 @@ Best Safety Training and Certification Courses Online | pdhsafety.com
 
 {% block meta_desc %}
 
-{% if subject %} Best Price Online {{ subject.title }}
-  (Easy Access 24/7 On All Devices)
-Easy To Take Course Satisfaction Guarantee
+{% if subject %} Best Price Online Courses - {{ subject.title }} (Easy Access 24/7 On All Devices) Easy To Take Course Satisfaction Guarantee.
 {% endif %}
 
 {% endblock %}
