--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -4,7 +4,7 @@
 {% load course %}
 {% load cache %}
 
-{% block title %}{% if object.metas.first.meta_title %}{{object.metas.first.meta_title}}{%else%}{{ object.title }} Course | pdhsafety.com{% endif %}{% endblock %}
+{% block title %}{% if object.metas.first.meta_title %}{{object.metas.first.meta_title}}| pdhsafety.com{%else%}{{ object.title }} Course | pdhsafety.com{% endif %}{% endblock %}
 
 {% block meta_desc %}{% if object.metas.first.meta_description %}{{object.metas.first.meta_description}}{%else%}Best Price Online {{ object.subject }}, Access 24/7 On All Devices. Easy To Take, Money Back Guarante{% endif %}{% endblock %}
 
@@ -112,7 +112,7 @@
                     <div class="course-single-header white-text">
                         <span class="subheading">{{ subject }}</span>
                         <h1 class="single-course-title text-white">{{ object.title }}</h1>
-                        {% if object.overview %}
+                        {% if object.overview and object.overview.strip %}
                         <p>{{ object.overview  }}</p>
                         {% endif %}
 
