--- a/app_cart/templates/cart.html
+++ b/app_cart/templates/cart.html
@@ -5,6 +5,8 @@
 
 {% block head%}
 
+<link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
+
 <!-- Begin Inspectlet Asynchronous Code -->
 <script type="text/javascript">
     (function () {
