--- a/app_cart/templates/checkout.html
+++ b/app_cart/templates/checkout.html
@@ -9,6 +9,8 @@ Checkout | pdhsafety.com
 
 {% block head %}
 
+<link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
+
 <!-- Begin Inspectlet Asynchronous Code -->
 <script type="text/javascript">
     (function () {
@@ -32,7 +34,6 @@ Checkout | pdhsafety.com
     })();
 </script>
 <!-- End Inspectlet Asynchronous Code -->
-
 
 {% endblock %}
 
