--- a/app_teachers/templates/manage/course/_features.html
+++ b/app_teachers/templates/manage/course/_features.html
@@ -35,6 +35,9 @@
 
                                     <a class="list-group-item list-group-item-action" id="list-more-list" data-toggle="list" href="#list-more" role="tab" aria-controls="more">
                                         More Features</a>
+                                    
+                                        <a class="list-group-item list-group-item-action" id="list-header-list" data-toggle="list" href="#header-more" role="tab" aria-controls="header">
+                                            Header</a>
                                 </div>
                             </div>
                             <div class="col-9">
@@ -117,6 +120,14 @@
                                         </div>
 
                                     </div>
+
+                                    <div class="tab-pane fade" id="header-more" role="tabpanel" aria-labelledby="list-header-list">
+                                        <textarea name="header" class="form-control">
+                                            {{ header }}
+                                        </textarea>
+
+                                    </div>
+
                                 </div>
 
                             </div>
