--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -219,7 +219,7 @@
                     <div>
                         {{ object.features.first.notes | safe }}
                     </div>
-                    <div>
+                    {% comment %} <div>
                         <ul>
                             <li>
                                 Easy to take class
@@ -234,7 +234,7 @@
                                 Money back guarantee
                             </li>
                         </ul>
-                    </div>
+                    </div> {% endcomment %}
                 </div>
                 {% endif %}
 
