--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -28,7 +28,7 @@
                         Your Progress<i class="fa fa-angle-down"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarp">
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item d-none" href="#">
                             <div>
                                 <div class="d-flex justify-content-center" id="timer">
                                     <h3 class="time-output" id="hours">00</h3>
