student fonts and removed print

--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -26,6 +26,10 @@
       {% endcomment %}
       <link rel="stylesheet" href="{% static 'edutim/combine.css' %}" />
 
+      <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Muli&family=Poppins:wght@400;600;700&family=Quicksand:wght@500;600;700&display=swa" />
+
+
       <!-- Begin Inspectlet Asynchronous Code -->
       <script type="text/javascript">
          (function () {
