fix addtocart price

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -579,7 +579,7 @@
                         parsedData.subject = subject;
                      }
 
-                    // addCourseToMemory(parsedData);
+                    addCourseToMemory(parsedData);
                      logEvent(parsedData);
                   }
                });
