--- a/app_cart/templates/cart.html
+++ b/app_cart/templates/cart.html
@@ -150,7 +150,7 @@
       <td class="product-remove">
          <a
             href="javascript:;"
-            class="remove link-remove-item"
+            class="remove link-remove-item btn btn-warning btn-sm"
             data-id="{{pk}}"
             aria-label="Remove this item"
             data-product_id="30"
@@ -177,7 +177,7 @@
             <label class="screen-reader-text" for="quantity_5cc58182489a8">Quantity</label>
             <input
                type="number"
-               class="input-text qty text"
+               class="input-text qty text text-center"
                step="1"
                min="1"
                max=""
@@ -187,6 +187,7 @@
                size="4"
                pattern="[0-9]*"
                inputmode="numeric"
+               style="width:90px;"
             /></div>
       </td>
       <td class="product-subtotal" data-title="Total">
@@ -202,6 +203,110 @@
 
 {% block scripts %}
 
+<style>
+    @media (max-width: 768px) {
+        .woocommerce table.shop_table_responsive thead, .woocommerce-page table.shop_table_responsive thead {
+            display: none
+        }
+      
+        .woocommerce table.shop_table_responsive tbody tr:first-child td:first-child, .woocommerce-page table.shop_table_responsive tbody tr:first-child td:first-child {
+            border-top: 0
+        }
+      
+        .woocommerce table.shop_table_responsive tbody th, .woocommerce-page table.shop_table_responsive tbody th {
+            display: none
+        }
+      
+        .woocommerce table.shop_table_responsive tr, .woocommerce-page table.shop_table_responsive tr {
+            display: block
+        }
+      
+        .woocommerce table.shop_table_responsive tr td, .woocommerce-page table.shop_table_responsive tr td {
+            display: block;
+            text-align: right !important
+        }
+      
+        .woocommerce table.shop_table_responsive tr td.order-actions, .woocommerce-page table.shop_table_responsive tr td.order-actions {
+            text-align: left !important
+        }
+      
+        .woocommerce table.shop_table_responsive tr td::before, .woocommerce-page table.shop_table_responsive tr td::before {
+            content: attr(data-title) ": ";
+            font-weight: 700;
+            float: left
+        }
+      
+        .woocommerce table.shop_table_responsive tr td.actions::before, .woocommerce table.shop_table_responsive tr td.product-remove::before, .woocommerce-page table.shop_table_responsive tr td.actions::before, .woocommerce-page table.shop_table_responsive tr td.product-remove::before {
+            display: none
+        }
+      
+        .woocommerce table.shop_table_responsive tr:nth-child(2n) td, .woocommerce-page table.shop_table_responsive tr:nth-child(2n) td {
+            background-color: rgba(0, 0, 0, .025)
+        }
+      
+        .woocommerce table.my_account_orders tr td.order-actions, .woocommerce-page table.my_account_orders tr td.order-actions {
+            text-align: left
+        }
+      
+        .woocommerce table.my_account_orders tr td.order-actions::before, .woocommerce-page table.my_account_orders tr td.order-actions::before {
+            display: none
+        }
+      
+        .woocommerce table.my_account_orders tr td.order-actions .button, .woocommerce-page table.my_account_orders tr td.order-actions .button {
+            float: none;
+            margin: .125em .25em .125em 0
+        }
+      
+        .woocommerce .col2-set .col-1, .woocommerce .col2-set .col-2, .woocommerce-page .col2-set .col-1, .woocommerce-page .col2-set .col-2 {
+            float: none;
+            width: 100%
+        }
+      
+      
+        .woocommerce #content div.product div.images, .woocommerce #content div.product div.summary, .woocommerce div.product div.images, .woocommerce div.product div.summary, .woocommerce-page #content div.product div.images, .woocommerce-page #content div.product div.summary, .woocommerce-page div.product div.images, .woocommerce-page div.product div.summary {
+            float: none;
+            width: 100%
+        }
+      
+        .woocommerce #content table.cart .product-thumbnail, .woocommerce table.cart .product-thumbnail, .woocommerce-page #content table.cart .product-thumbnail, .woocommerce-page table.cart .product-thumbnail {
+            display: none
+        }
+      
+        .woocommerce #content table.cart td.actions, .woocommerce table.cart td.actions, .woocommerce-page #content table.cart td.actions, .woocommerce-page table.cart td.actions {
+            text-align: left
+        }
+      
+        .woocommerce #content table.cart td.actions .coupon, .woocommerce table.cart td.actions .coupon, .woocommerce-page #content table.cart td.actions .coupon, .woocommerce-page table.cart td.actions .coupon {
+            float: none;
+            padding-bottom: .5em
+        }
+      
+        .woocommerce #content table.cart td.actions .coupon::after, .woocommerce #content table.cart td.actions .coupon::before, .woocommerce table.cart td.actions .coupon::after, .woocommerce table.cart td.actions .coupon::before, .woocommerce-page #content table.cart td.actions .coupon::after, .woocommerce-page #content table.cart td.actions .coupon::before, .woocommerce-page table.cart td.actions .coupon::after, .woocommerce-page table.cart td.actions .coupon::before {
+            content: ' ';
+            display: table
+        }
+      
+        .woocommerce #content table.cart td.actions .coupon::after, .woocommerce table.cart td.actions .coupon::after, .woocommerce-page #content table.cart td.actions .coupon::after, .woocommerce-page table.cart td.actions .coupon::after {
+            clear: both
+        }
+      
+        .woocommerce #content table.cart td.actions .coupon .button, .woocommerce #content table.cart td.actions .coupon .input-text, .woocommerce #content table.cart td.actions .coupon input, .woocommerce table.cart td.actions .coupon .button, .woocommerce table.cart td.actions .coupon .input-text, .woocommerce table.cart td.actions .coupon input, .woocommerce-page #content table.cart td.actions .coupon .button, .woocommerce-page #content table.cart td.actions .coupon .input-text, .woocommerce-page #content table.cart td.actions .coupon input, .woocommerce-page table.cart td.actions .coupon .button, .woocommerce-page table.cart td.actions .coupon .input-text, .woocommerce-page table.cart td.actions .coupon input {
+            width: 48%;
+            box-sizing: border-box
+        }
+      
+        .woocommerce #content table.cart td.actions .coupon .button.alt, .woocommerce #content table.cart td.actions .coupon .input-text + .button, .woocommerce table.cart td.actions .coupon .button.alt, .woocommerce table.cart td.actions .coupon .input-text + .button, .woocommerce-page #content table.cart td.actions .coupon .button.alt, .woocommerce-page #content table.cart td.actions .coupon .input-text + .button, .woocommerce-page table.cart td.actions .coupon .button.alt, .woocommerce-page table.cart td.actions .coupon .input-text + .button {
+            float: right
+        }
+      
+        .woocommerce #content table.cart td.actions .button, .woocommerce table.cart td.actions .button, .woocommerce-page #content table.cart td.actions .button, .woocommerce-page table.cart td.actions .button {
+            display: block;
+            width: 100%
+        }
+      
+      
+      }
+</style>
 <script>
     (function ($) {
 
