--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -162,7 +162,7 @@
                </a>
                <span class="mr-auto top-logo-tagline d-none d-md-block d-lg-block d-xl-block">Make Safety Training Happen</span>
 
-               <form method="get" action="{% url 'courses_list' %}">
+               <form method="get" class="" action="{% url 'courses_list' %}">
                   <div class="input-group top-search-wrap">
                      <input type="text" class="form-control" id="textQ" name="q"
                         placeholder="What do you want to learn?" title="Search courses here. " />
@@ -212,7 +212,7 @@
                            aria-haspopup="true" aria-expanded="false">
                            Courses<i class="fa fa-angle-down"></i>
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbar3">
+                        <div class="dropdown-menu subjects-child-dropdown" aria-labelledby="navbar3">
                      
                            <div class="p-2 mb-2 bg-light">
                      
